# ffmpegApp1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadME.md
assets/: MacOSXBundleInfo.plist.in
cmake/: FindFFmpeg.cmake
lib/FFmpeg/: CmakeLists.txt
src/: VideoReader.cpp  VideoReader.hpp  load_frame.cpp  load_frame.h  load_frame.hpp  main.cpp
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/ffmpegApp1.xcodeproj/: project.pbxproj
xcode/ffmpegApp1.xcodeproj/project.xcworkspace/xcuserdata/giancedrickepilan.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/ffmpegApp1.xcodeproj/xcuserdata/giancedrickepilan.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/lib/FFmpeg/: cmake_install.cmake
xcode/lib/FFmpeg/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/lib/FFmpeg/FFmpeg.xcodeproj/: project.pbxproj
xcode/lib/glfw/: cmake_install.cmake  cmake_uninstall.cmake
xcode/lib/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  uninstall_cmakeRulesBuildPhase.makeRelease
xcode/lib/glfw/GLFW.xcodeproj/: project.pbxproj
xcode/lib/glfw/src/: cmake_install.cmake
